@@ -1,5 +1,11 @@
 2022-05-05  Mark Wielaard  <mark@klomp.org>
 
+	* debuginfod.cxx (main): Define use_epoll. Set to MHD_USE_EPOLL
+	based on MHD_VERSION. Don't use MHD_USE_THREAD_PER_CONNECTION
+	when use_poll is set.
+
+2022-05-05  Mark Wielaard  <mark@klomp.org>
+
 	* debuginfod.cxx (main): Define mhd_flags. Use mhd_flags for
 	MHD_start_daemon. Try again with MHD_USE_DUAL_STACK removed if
 	that fails. Update clog to say either IPV4 or IPV4 and IPV6.
